execom mobile hover and content remaining

--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
 <div id="wrap">
 
 	<!-- PRELOADER -->
-		<div id="loader">
-		</div>
+		<div id="loader"></div>
 
 
 	<!-- Navbar -->
@@ -56,7 +55,7 @@
 			            </div>
 			            <div class="collapse navbar-collapse scrollspy">
 			                <ul class="nav navbar-nav navbar-right">                 
-								<li class="dropdown">
+								<li class="dropdown active">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="#aboutieee">About IEEE</a></li>
@@ -68,15 +67,14 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Events</a></li>
-										<li><a href="#">TechVeda</a></li>
-										<li><a href="#">Participation</a></li>
+										<li><a href="events.html">Events</a></li>
+										<li><a href="techveda.html">TechVeda</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="office.html#201415">Execom 2014-15</a></li>
+										<li><a href="office.html">Execom 2014-15</a></li>
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
@@ -90,28 +88,29 @@
 
 
 	<!-- Content -->
-		<div class="container-fluid bg-about">
+		<div class="bg-attach bg-about toAffix" data-spy="affix"></div>
+		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 scrollspy">
-						<ul id="aboutNav" class="nav nav-pills nav-stacked hidden-xs hidden-sm" data-spy="affix">
+					<div class="col-sm-3 scrollspy">
+						<ul class="nav nav-pills nav-stacked hidden-xs toAffix" data-spy="affix">
 							<li class="active"><a href="#aboutieee">About IEEE</a></li>
 							<li><a href="#aboutsb">About IEEE GGSIPU</a></li>
 							<li><a href="#vision">Our Vision</a></li>
 							<li><a href="#benefits">Benefits</a></li>
 						</ul>
 					</div>
-					<div class="col-md-7">
+					<div class="col-sm-7 col-xs-10">
 						<section class="content" id="aboutieee">
 							<div class="page-header">
 								<div class="row">
 								<!-- <h3>About IEEE</h3> -->
-								<img class="img-responsive col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3" src="http://www.ieee.org/about/toolkit/masterbrand/20040816">
+								<img class="img-responsive col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3" src="images/ieee.jpg" alt="About IEEE">
 								</div>
 							</div>
-							<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
-							<p>IEEE and its members inspire global community through its highly cited publications, conferences, technology standards and professional plus educational activities. Its student branches contribute a lot in developing an engineer student’s personality and technical skills. Every day, IEEE societies make a difference in the world and the lives of their members. Today, IEEE is serving more than 425,000 members who are geographically organized into 10 regions over 333 sections and 2,345 student branches that conduct and participate in its activities.</p>
-							<p>At the pre-college level, the IEEE works with industry, universities and government to raise student’s literacy in science, maths, engineering and technology. IEEE journals are consistently among the most named in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today’s telecommunications, information technology and power generation products and services. IEEE helps in discovering better career opportunities and gain a better understanding of the field.</p>
+								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as Eye-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<p>IEEE and its members inspire global community through its highly cited publications, conferences, technology standards and professional plus educational activities. Its student branches contribute a lot in developing an engineer student’s personality and technical skills. Every day, IEEE societies make a difference in the world and the lives of their members. Today, IEEE is serving more than 425,000 members who are geographically organized into 10 regions over 333 sections and 2,345 student branches that conduct and participate in its activities.</p>
+								<p>At the pre-college level, the IEEE works with industry, universities and government to raise student’s literacy in science, maths, engineering and technology. IEEE journals are consistently among the most named in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today’s telecommunications, information technology and power generation products and services. IEEE helps in discovering better career opportunities and gain a better understanding of the field.</p>
 
 							<div class="hr"></div>
 						</section>
@@ -135,13 +134,37 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-xs-12"></div>
+					<div class="col-md-4 col-xs-12">
+						<div class="page-header">
+							<h3>GGSIPU</h3>
+						</div>
+						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"></a>
+						<p>Guru Gobind Singh Indraprastha University, 'A' Grade accreditation by NAAC, established by Government of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999.</p>
+					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Get in touch</h3>
 						</div>
+						<address>
+						  <strong>IEEE GGSIPU</strong><br>
+						 Guru Gobind Singh Indraprastha University<br>
+						 Sector - 16C Dwarka<br>
+						 Delhi - 110078, India<br>
+						</address>
+
+						<address>
+						  <strong>General Secretary</strong><br>
+						  <abbr title="Phone">P:</abbr> +91-9560796951<br>
+						  <a href="mailto:#">ieee.usict@gmail.com</a>
+						</address>
+							<h4>Quick Links</h4>
+						<ul class="list-unstyled">
+							<li><a href="http://www.r10sac.org/" target="_blank">IEEE India SAC</a></li>
+							<li><a href="http://delhi.r10sac.org/" target="_blank">IEEE Delhi Section</a></li>
+							<li><a href="http://www.ipu.ac.in" target="_blank">GGSIPU</a></li>
+						</ul>
 					</div>
-					<div class="col-md-5 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Follow us</h3>
 						</div>
@@ -170,17 +193,6 @@
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/custom.js"></script>
 		<script type="text/javascript" src="js/scrollNav.js"></script>
-
-		<script>
-
-		//affix offset
-		$('#aboutNav').affix({
-    		offset: {
-			bottom: ($('footer').outerHeight(true)+25)}
-		});
-	    
-
-		</script>
 
 </body>
 </html>
