--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <div id="wrap" class="bg-home">
 
 	<!-- PRELOADER -->
-		<div id="loader">
-		</div>
+		<div id="loader"></div>
 
 
 	<!-- Navbar -->
@@ -68,15 +67,14 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Events</a></li>
-										<li><a href="#">TechVeda</a></li>
-										<li><a href="#">Participation</a></li>
+										<li><a href="events.html">Events</a></li>
+										<li><a href="techveda.html">TechVeda</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="office.html#201415">Execom 2014-15</a></li>
+										<li><a href="office.html">Execom 2014-15</a></li>
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
@@ -183,13 +181,14 @@
 							<div class="page-header text-center">
 							<h1>What is IEEE?</h1>
 							</div>
-							<p class="col-md-8 col-md-offset-2 col-xs-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">IEEE and its members inspire global community through its highly cited publications, conferences, technology standards and professional plus educational activities. Its student branches contribute a lot in developing an engineer student’s personality and technical skills. Every day, IEEE societies make a difference in the world and the lives of their members. Today, IEEE is serving more than 425,000 members who are geographically organized into 10 regions over 333 sections and 2,345 student branches that conduct and participate in its activities.</p>
 						</div>
 						<div role="tabpanel" class="tab-pane fade in" id="tab2">
 							<div class="page-header text-center">
 							<h1>Our Vision</h1>
 							</div>
-							<p class="col-md-8 col-md-offset-2 col-xs-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">At the pre-college level, the IEEE works with industry, universities and government to raise student’s literacy in science, maths, engineering and technology. IEEE journals are consistently among the most named in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today’s telecommunications, information technology and power generation products and services. IEEE helps in discovering better career opportunities and gain a better understanding of the field.</p>
 						</div>
 						<div role="tabpanel" class="tab-pane fade in" id="tab3">
 							<div class="page-header text-center">
@@ -230,7 +229,7 @@
 				<!-- CALENDAR -->
 					<div class="col-md-4 hidden-xs hidden-sm">
 						<div class="embed-responsive embed-responsive-4by3">
-							<iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=google.com_jqv7qt9iifsaj94cuknckrabd8%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=Asia%2FCalcutta" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+							<iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=google.com_6m6gbncfpqgvsi1nlpe65mu3ek%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=Asia%2FCalcutta" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 						</div>
 					</div>
 			</div>
@@ -256,11 +255,11 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="images\faces\img-1.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="images\faces\img-2.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
-                  <small>Someone famous</small>
+                  <p>I joined IEEE to connect with like-minded, dedicated professionals and students across the globe!</p>
+                  <small>Shubham Jain</small>
                 </div>
               </div>
             </blockquote>
@@ -270,11 +269,11 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="images\faces\img-2.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="images\faces\img-1.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-                  <small>Someone famous</small>
+                  <p>I joined IEEE as an opportunity to meet and work with both students and professionals from other engineering fields.</p>
+                  <small>Harshit Dwivedi,</small>
                 </div>
               </div>
             </blockquote>
@@ -287,8 +286,8 @@
                   <img class="img-circle" src="images\faces\img-3.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
-                  <small>Someone famous</small>
+                  <p>I joined IEEE to participate in cool programming competitions and enhance my professional career</p>
+                  <small>Akshay Khusu</small>
                 </div>
               </div>
             </blockquote>
@@ -312,13 +311,37 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-xs-12"></div>
+					<div class="col-md-4 col-xs-12">
+						<div class="page-header">
+							<h3>GGSIPU</h3>
+						</div>
+						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"></a>
+						<p>Guru Gobind Singh Indraprastha University, 'A' Grade accreditation by NAAC, established by Government of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999.</p>
+					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Get in touch</h3>
 						</div>
+						<address>
+						  <strong>IEEE GGSIPU</strong><br>
+						 Guru Gobind Singh Indraprastha University<br>
+						 Sector - 16C Dwarka<br>
+						 Delhi - 110078, India<br>
+						</address>
+
+						<address>
+						  <strong>General Secretary</strong><br>
+						  <abbr title="Phone">P:</abbr> +91-9560796951<br>
+						  <a href="mailto:#">ieee.usict@gmail.com</a>
+						</address>
+							<h4>Quick Links</h4>
+						<ul class="list-unstyled">
+							<li><a href="http://www.r10sac.org/" target="_blank">IEEE India SAC</a></li>
+							<li><a href="http://delhi.r10sac.org/" target="_blank">IEEE Delhi Section</a></li>
+							<li><a href="http://www.ipu.ac.in" target="_blank">GGSIPU</a></li>
+						</ul>
 					</div>
-					<div class="col-md-5 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Follow us</h3>
 						</div>
