--- a/office.html
+++ b/office.html
@@ -17,7 +17,7 @@
 <div id="wrap">
 
 	<!-- PRELOADER -->
-		<!-- <div id="loader"></div> -->
+		<div id="loader"></div>
 
 
 	<!-- Navbar -->
@@ -67,12 +67,11 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Events</a></li>
-										<li><a href="#">TechVeda</a></li>
-										<li><a href="#">Participation</a></li>
+										<li><a href="events.html">Events</a></li>
+										<li><a href="techveda.html">TechVeda</a></li>
 									</ul>
 								</li>
-								<li class="dropdown">
+								<li class="dropdown active">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="#201415" data-toggle="tab">Execom 2014-15</a></li>
@@ -89,11 +88,12 @@
 
 
 	<!-- Content -->
-		<div class="container-fluid bg-team">
+		<div class="bg-attach bg-office toAffix" data-spy="affix"></div>
+		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-xs-12 scrollspy">
-						<ul id="aboutNav" class="nav nav-pills nav-stacked hidden-xs hidden-sm" data-spy="affix">
+						<ul class="nav nav-pills nav-stacked hidden-xs hidden-sm toAffix" data-spy="affix">
 							<li class="active"><a href="#201415" data-toggle="tab">Execom 2014-2015</a></li>
 							<li><a href="#201314" data-toggle="tab">Execom 2013-2014</a></li>
 						</ul>
@@ -106,73 +106,157 @@
 									<ul class="grid">
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Branch Counsellor</h3>
+													<span>Mr. Ashish Payal</span>
+												</figcaption>
+											</figure>
+										</li><br>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Branch Mentor</h3>
+													<span>Kunal Krishna</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Chairperson</h3>
+													<span>Himanshu Garg</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Vice Chair</h3>
+													<span>Pranav Kumar</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>General Secretary</h3>
+													<span>Shubham Jain</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Joint Secretary</h3>
+													<span>Ishan Sain</span>
+												</figcaption>
+											</figure>
+										</li><br>
+										<h2>HR Team</h2>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>HR - Head</h3>
+													<span>Akshay Khusu</span>
+												</figcaption>
+											</figure>
+										</li><br>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>HR - Coordinator</h3>
+													<span>Aman Gupta</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>HR - Coordinator</h3>
+													<span>Tushar Khurana</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>HR - Coordinator</h3>
+													<span>Rohan Banga</span>
+												</figcaption>
+											</figure>
+										</li>
+										<h2>Tech Team</h2>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Tech Head</h3>
+													<span>Siddharth Verma</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Tech Coordinator</h3>
+													<span>Rajat Arora</span>
+												</figcaption>
+											</figure>
+										</li>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Tech Coordinator</h3>
+													<span>Harshit Dwivedi</span>
+												</figcaption>
+											</figure>
+										</li>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Tech Coordinator</h3>
+													<span>Raghav Chhabra</span>
+												</figcaption>
+											</figure>
+										</li>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Tech Coordinator</h3>
+													<span>Ujjwal Bhargava</span>
+												</figcaption>
+											</figure>
+										</li>
+										<h2>Web Team</h2>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Web - Head</h3>
+													<span>Shubham Jain</span>
+												</figcaption>
+											</figure>
+										</li>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/shubham-ggsipu.jpg" alt="img02">
+												<figcaption>
+													<h3>Web - Coordinator</h3>
+													<span>Rahul Goel</span>
 												</figcaption>
 											</figure>
 										</li>
@@ -180,52 +264,62 @@
 								</div>
 								<div class="hr"></div>
 							</section>
-							<section class="tab-pane fade in" id="201314">
+							<section class="tab-pane fade in" id="201314" role="tabpanel" aria-labelledBy="201314-tab">
 								<div class="page-header"><h3>Executive Committee 2013-2014</h3></div>
 								<div>
 									<ul class="grid">
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/udayan-ghose-ggsipu.jpg" alt="Dr. Udayan Ghose">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Branch Counsellor</h3>
+													<span>Dr. Udayan Ghose</span>
+												</figcaption>
+											</figure>
+										</li><br>
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/kunal-krishna-ggsipu.jpg" alt="Kunal Krishna">
+												<figcaption>
+													<h3>Chairperson</h3>
+													<span>Kunal Krishna</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/pranav-kumar1-ggsipu.jpg" alt="Pranav Kumar">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Vice-Chair</h3>
+													<span>Pranav Kumar</span>
+												</figcaption>
+											</figure>
+										</li>
+										
+										<li>
+											<figure>
+												<img class="img-responsive" src="images/execom/himanshu-garg-ggsipu.jpg" alt="Himanshu Garg">
+												<figcaption>
+													<h3>General Secretary</h3>
+													<span>Himanshu Garg</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/pranav-kumar2-ggsipu.jpg" alt="Pranav Kumar">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Treasurer</h3>
+													<span>Pranav Kumar</span>
 												</figcaption>
 											</figure>
 										</li>
 										<li>
 											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
+												<img class="img-responsive" src="images/execom/siddharth-verma-ggsipu.jpg" alt="Pranav Kumar">
 												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
+													<h3>Technical Head</h3>
+													<span>Siddharth Verma</span>
 												</figcaption>
 											</figure>
 										</li>
@@ -243,13 +337,37 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-xs-12"></div>
+					<div class="col-md-4 col-xs-12">
+						<div class="page-header">
+							<h3>GGSIPU</h3>
+						</div>
+						<a href="//www.ipu.ac.in" target="_blank"><img class="img-responsive" src="images/ipu_logo.png"></a>
+						<p>Guru Gobind Singh Indraprastha University, 'A' Grade accreditation by NAAC, established by Government of NCT of Delhi under the provisions of Guru Gobind Singh Indraprastha University Act, 1998 read with its Amendment in 1999.</p>
+					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Get in touch</h3>
 						</div>
+						<address>
+						  <strong>IEEE GGSIPU</strong><br>
+						 Guru Gobind Singh Indraprastha University<br>
+						 Sector - 16C Dwarka<br>
+						 Delhi - 110078, India<br>
+						</address>
+
+						<address>
+						  <strong>General Secretary</strong><br>
+						  <abbr title="Phone">P:</abbr> +91-9560796951<br>
+						  <a href="mailto:#">ieee.usict@gmail.com</a>
+						</address>
+							<h4>Quick Links</h4>
+						<ul class="list-unstyled">
+							<li><a href="http://www.r10sac.org/" target="_blank">IEEE India SAC</a></li>
+							<li><a href="http://delhi.r10sac.org/" target="_blank">IEEE Delhi Section</a></li>
+							<li><a href="http://www.ipu.ac.in" target="_blank">GGSIPU</a></li>
+						</ul>
 					</div>
-					<div class="col-md-5 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="page-header">
 							<h3>Follow us</h3>
 						</div>
@@ -276,16 +394,12 @@
 <!-- SCRIPTS -->
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+	    <!-- // <script type="text/javascript" src="js/jquery.lazyload.min.js"></script> -->
 		<script type="text/javascript" src="js/custom.js"></script>
 		<script src="js/toucheffects.js"></script>
 
 		 <script>
-
-		//affix offset
-		$('#aboutNav').affix({
-    		offset: {
-			bottom: ($('footer').outerHeight(true)+25)}
-		});
+		 // $("img.lazy").lazyload();
 		$(function () {
 		   var activeTab = $('[href=' + location.hash + ']');
 		   activeTab && activeTab.tab('show');
