--- a/techveda.html
+++ b/techveda.html
@@ -68,8 +68,8 @@
 								<li class="dropdown active">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li class="active"><a href="events.html">Events</a></li>
-										<li><a href="techveda.html">TechVeda</a></li>
+										<li><a href="events.html">Events</a></li>
+										<li class="active"><a href="techveda.html">TechVeda</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
@@ -94,11 +94,10 @@
 				<div class="row">
 					<div class="col-sm-3 col-xs-12 scrollspy hidden-xs ">
 						<ul class="nav nav-pills nav-stacked toAffix" data-spy="affix">
-							<li class="active"><a href="#startup" data-toggle="tab">Startup Bootcamp</a></li>
-							<li><a href="#python" data-toggle="tab">Python 101</a></li>
-							<li><a href="#web" data-toggle="tab">Web Slinger</a></li>
-							<li><a href="#sensoduino" data-toggle="tab">Sensoduino</a></li>
-							<li><a href="#synapse" data-toggle="tab">Synapse</a></li>
+							<li class="active"><a href="#issue4" data-toggle="tab">Issue 4</a></li>
+							<li><a href="#issue3" data-toggle="tab">Issue 3</a></li>
+							<li><a href="#issue2" data-toggle="tab">Issue 2</a></li>
+							<li><a href="#issue1" data-toggle="tab">Issue 1</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-12 visible-xs" role="tabpanel">
@@ -109,85 +108,46 @@
 						          <span class="caret"></span>
 							  </button>
 								<ul id="eventList" class="dropdown-menu" role="menu" aria-labelledby="eventMenu">
-									<li><a tabindex="-1" href="#startup" data-toggle="tab" role="tab" id="startup-tab" aria-controls="startup">Startup Bootcamp</a></li>
-									<li><a tabindex="-1" href="#python" data-toggle="tab" role="tab" id="python-tab" aria-controls="python">Python 101</a></li>
-									<li><a tabindex="-1" href="#web" data-toggle="tab" role="tab" id="web-tab" aria-controls="web">Web Slinger</a></li>
-									<li><a tabindex="-1" href="#sensoduino" data-toggle="tab" role="tab" id="sensoduino-tab" aria-controls="sensoduino">Sensoduino</a></li>
-									<li><a tabindex="-1" href="#synapse" data-toggle="tab" role="tab" id="synapse-tab" aria-controls="synapse">Synapse</a></li>
+									<li><a tabindex="-1" href="#issue4" data-toggle="tab" role="tab" id="issue4-tab" aria-controls="issue4">Issue 4</a></li>
+									<li><a tabindex="-1" href="#issue3" data-toggle="tab" role="tab" id="issue3-tab" aria-controls="issue3">Issue 3</a></li>
+									<li><a tabindex="-1" href="#issue2" data-toggle="tab" role="tab" id="issue2-tab" aria-controls="issue2">Issue 2</a><li>
+									<li><a tabindex="-1" href="#issue1" data-toggle="tab" role="tab" id="issue1-tab" aria-controls="issue1">Issue 1</a></li>
 								</ul>
 							</li>
 						</ul>
 					</div>
 					<div class="col-sm-9 col-xs-12">
 						<div class="tab-content">
-							<section class="tab-pane fade in active" id="startup" role="tabpanel" aria-labelledBy="startup-tab">
-								<div class="page-header"><h3>Startup Bootcamp <small><date>12th March, 2015</date></small></h3></div>
-								<h4>Talk - Startup & Life</h4>
-								<p>Indian startups do receive a lot of negative and neutral comments from various MNCs. These comments not only affect hiring as well as other people perspective towards our business. Ranjeet Singh is a Software Engineer at C42 Engineering who work as a startup consultant. He with his other team members help startups to engineer their product. In his talk about Startup and Life he picked up most of the myths about startups and tell the truth behind whether they are true or not. Lastly, he talked about how to apply to startups, evaluate them and how do they evaluate you.</p>
-								<div class="hr"></div>
-								<h4>Workshop - Agile Software Development</h4>
-								<p>Agile Software Development is a tuneable software development strategy for small business like startups. This workshop was designed to give a very introductory knowledge about,
-									<ul>
-										<li>Taiga.io Fundamentals</li>
-										<li>Manage projects agile way</li>
-										<li>Story based estimations in both time and cost</li>
-										<li>TDD/BDD (with RSpec)</li>
-										<li>Rails Fundamentals</li>
-										<li>Continuous Integration (with Travis CI)</li>
-										<li>Code Metrics (with Code Climate)</li>
-										<li>Deployments (on Heroku)</li>
-										<li>Controlling Project Velocity and Team Management</li>
-									</ul>
-								</p>
-								<div class="hr"></div>
-							</section>
-							<section class="tab-pane fade in" id="python" role="tabpanel" aria-labelledBy="python-tab">
-								<div class="page-header"><h3>Python 101 <small><date>5th February, 2015</date></small></h3></div>
-								<p>Students from 2nd year conducted an introductory level workshop teaching basics of Python. In this workshop student's were made familiar with basic fundamentals, concepts and applications of python and the following topics were discussed:
-									<ul>
-								<li>Introduction to python</li>
-								<li>Why is it so popular?</li>
-								<li>Difference between compiler and interpreter</li>
-								<li>Input,output statements</li>
-								<li>Flow of control(if else and loop)</li>
-								<li>Break,continue,pass statements</li>
-								<li>Functions</li>
-								<li>Python strings</li>
-								<li>Python lists</li>
-								<li>Python tuples</li>
-								<li>Python dictionary</li>
-								<li>Modules(math,random)</li>
-								<li>File handling</li>
-									</ul></p>
-								<div class="hr"></div>
-							</section>
-							<section class="tab-pane fade in" id="web" role="tabpanel" aria-labelledBy="web-tab">
-								<div class="page-header"><h3>Web-Slinger <small><date>22th November, 2014</date></small></h3></div>
-								<p>IEEE GGSIPU Student Branch hosted an introductory workshop "WebSlinger (Introduction to Web Designing)", which was carried forward by IEEE student branch members. Objective of the workshop was to introduce students' to the subject and teach them building blocks of the same.</p>
-								<p>
-								Following topics were discussed:
-								<ul>
-									<li>HTML</li>
-									<li>CSS</li>
-									<li>Web hosting</li>
-									<li>Bandwidth</li>
-									<li>FTP</li>
-									<li>Servers</li>
-									<li>Professional's approach to web desigining</li>
-								</ul></p>
-								<div class="hr"></div>
-							</section>
-							<section class="tab-pane fade in" id="sensoduino" role="tabpanel" aria-labelledBy="sensoduino-tab">
-								<div class="page-header"><h3>Sensoduino <small><date>22th November, 2014</date></small></h3></div>
-								<p>IEEE GGSIPU Student Branch organised an introductory workshop "Sensoduino (Introduction to Arduino)", conducted by IEEE student branch members. Objective of the workshop was to introduce students' to the subject and teach them building blocks of the same.</p>
-									<p>Sensoduino was a hand-on workshop where students were given an introdcution to Arduino board. <br>Difference between a microprocessor and microcontroller, sensors and actuators etc. were discussed. <br>Introduction to programming with Arduino IDE environment was held and students were asked to make and test basics programmes like blinking of LED, Controlling servo motors and triggering circuits using IR sensors.</p>
-								<div class="hr"></div>
-							</section>
-							<section class="tab-pane fade in" id="synapse" role="tabpanel" aria-labelledBy="synapse-tab">
-								<div class="page-header"><h3>Synapse - IEEE Day Celebration <small><date>5th October, 2014</date></small></h3></div>
+							<section class="tab-pane fade in active" id="issue4" role="tabpanel" aria-labelledBy="issue4-tab">
+								<div class="page-header"><h3>Issue 4<!-- <small><date>12th March, 2015</date></small> --></h3></div>
 								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
-								<p>IEEE and its members inspire global community through its highly cited publications, conferences, technology standards and professional plus educational activities. Its student branches contribute a lot in developing an engineer student’s personality and technical skills. Every day, IEEE societies make a difference in the world and the lives of their members. Today, IEEE is serving more than 425,000 members who are geographically organized into 10 regions over 333 sections and 2,345 student branches that conduct and participate in its activities.</p>
-								<p>At the pre-college level, the IEEE works with industry, universities and government to raise student’s literacy in science, maths, engineering and technology. IEEE journals are consistently among the most named in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today’s telecommunications, information technology and power generation products and services. IEEE helps in discovering better career opportunities and gain a better understanding of the field.</p>
+								<div class="embed-responsive embed-responsive-4by3">
+									<div data-configid="16675146/12258204" class="issuuembed"></div>
+								</div>
+								<div class="hr"></div>
+							</section>
+							<section class="tab-pane fade in" id="issue3" role="tabpanel" aria-labelledBy="issue3-tab">
+								<div class="page-header"><h3>Issue 3 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
+								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="embed-responsive embed-responsive-4by3">
+									<div data-configid="16675146/12258374" class="issuuembed"></div>
+								</div>
+								<div class="hr"></div>
+							</section>
+							<section class="tab-pane fade in" id="issue2" role="tabpanel" aria-labelledBy="issue2-tab">
+								<div class="page-header"><h3>Issue 2 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
+								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="embed-responsive embed-responsive-4by3">
+									<div data-configid="16675146/12258391" class="issuuembed"></div>
+								</div>
+								<div class="hr"></div>
+							</section>
+							<section class="tab-pane fade in" id="issue1" role="tabpanel" aria-labelledBy="issue1-tab">
+								<div class="page-header"><h3>Issue 1 <!-- <small><date>5th February, 2015</date></small> --></h3></div>
+								<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
+								<div class="embed-responsive embed-responsive-4by3">
+									<div data-configid="16675146/12258397" class="issuuembed"></div>
+								</div>
 								<div class="hr"></div>
 							</section>
 						</div>
@@ -258,5 +218,6 @@
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/custom.js"></script>
+		<script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
 </body>
 </html>
